Edits to customize site for SBU workshop

--- a/_includes/sc/who.html
+++ b/_includes/sc/who.html
@@ -1,8 +1,9 @@
 <p id="who">
   <strong>Who:</strong>
-  The course is aimed at graduate students and other researchers.
+  The course is aimed at researchers of all levels, graduate students to veterans.
   <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+    For the Software Carpentry portions of this workshop, 
+    you do not necessarily need any previous knowledge of the tools
+    that will be presented.
   </strong>
 </p>
