--- a/_includes/sc/intro.html
+++ b/_includes/sc/intro.html
@@ -3,9 +3,11 @@
   aims to help researchers get their work done
   in less time and with less pain
   by teaching them basic research computing skills.
-  This hands-on workshop will cover basic concepts and tools,
+  This portion of the hands-on workshop will cover basic concepts and tools,
   including program design, version control, data management,
   and task automation.
+  Other portions of the workshop and hackathon will cover more advanced
+  topics and the development of new software.
   Participants will be encouraged to help one another
   and to apply what they have learned to their own research problems.
 </p>
