--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,24 +1,29 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>1 August, Tuesday</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>08:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
+      <tr> <td>09:35</td>  <td>Break</td> </tr>
+      <tr> <td>09:45</td>  <td>Building Programs with Python: Part 1</td> </tr>
+      <tr> <td>12:05</td>  <td>Lunch break</td> </tr>
+      <tr> <td>13:00</td>  <td>Building programs with Python: Part 2</td> </tr>
+      <tr> <td>15:30</td>  <td>Break/td> </tr>
+      <tr> <td>15:45</td>  <td>Introduction to Google HPDC Infrastructure</td> </tr>
+      <tr> <td>18:00</td>  <td>Break for the day - Dinner</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 2</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>08:00</td>  <td>Version control with Git: Part 1</td> </tr>
+      <tr> <td>10:05</td>  <td>Break</td> </tr>
+      <tr> <td>10:15</td>  <td>Version control with Git: Part 2</td> </tr>
+      <tr> <td>11:05</td>  <td>Break</td> </tr>
+      <tr> <td>11:15</td>  <td>Introduction to Academic Research Computing and Running your first job</td> </tr>
+      <tr> <td>13:15</td>  <td>Lunch</td> </tr>
+      <tr> <td>14:15</td>  <td>Parallel Sessions - Polar Cyberinfrastructure RCN Specific Topics</td> </tr>
+      <tr> <td>17:15</td>  <td>Dinner</td> </tr>
+      <tr> <td>19:00</td>  <td>Hackathon Session 1</td> </tr>
     </table>
   </div>
 </div>
