--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -67,6 +67,12 @@
       <li><a href="{{site.swc_pages}}/git-novice/reference/">Reference...</a></li>
     </ul>
   </div>
+  <div class="col-md-6">
+    <h3 id="syllabus-hpc">Google HPDC Infrastructure</h3>
+    <ul>
+      <li>More information coming.</li>
+    </ul>
+  </div>
       <!--
   <div class="col-md-6">
     <h3 id="syllabus-sql">Managing Data with SQL</h3>
