--- a/_includes/sc/syllabus.html
+++ b/_includes/sc/syllabus.html
@@ -68,14 +68,7 @@
     </ul>
   </div>
   <div class="col-md-6">
-    <h3 id="syllabus-hpc">Google HPDC Infrastructure</h3>
-    <ul>
-      <li>More information coming.</li>
-    </ul>
-  </div>
-      <!--
-  <div class="col-md-6">
-    <h3 id="syllabus-sql">Managing Data with SQL</h3>
+    <h3 id="syllabus-sql">Managing Data with SQL - Not being covered</h3>
     <ul>
       <li>Reading and sorting data</li>
       <li>Filtering with <code>where</code></li>
@@ -88,6 +81,7 @@
       <li><a href="{{site.swc_pages}}/sql-novice-survey/reference/">Reference...</a></li>
     </ul>
   </div>
+      <!--
   <div class="col-md-6">
     <h3 id="syllabus-r">Open Refine</h3>
     <ul>
