--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -7,7 +7,7 @@
       <tr> <td>09:45</td>  <td>Building Programs with Python: Part 1</td> </tr>
       <tr> <td>12:05</td>  <td>Lunch break</td> </tr>
       <tr> <td>13:00</td>  <td>Building programs with Python: Part 2</td> </tr>
-      <tr> <td>15:30</td>  <td>Break/td> </tr>
+      <tr> <td>15:30</td>  <td>Break</td> </tr>
       <tr> <td>15:45</td>  <td>Introduction to Google HPDC Infrastructure</td> </tr>
       <tr> <td>18:00</td>  <td>Break for the day - Dinner</td> </tr>
     </table>
