--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -13,7 +13,7 @@
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>2 August, Wednesday</h3>
     <table class="table table-striped">
       <tr> <td>08:00</td>  <td>Version control with Git: Part 1</td> </tr>
       <tr> <td>10:05</td>  <td>Break</td> </tr>
